Fixed pasting into note content in editor did not change empty title to "untitled". Using $watch instead of ng-keydown.

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -111,7 +111,7 @@
 
             <!-- CONTENT -->
             <div class="row-vertically-centered with-textarea">
-              <textarea ng-class="onboardingInProgress && 'input-separate'" ng-model="note.trans.content" input-model-validator ng-focus="noteContentFocused()" ng-blur="noteContentBlurred()" msd-elastic editable-field ng-trim="false" editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)" ng-keydown="noteContentKeyDown($event)" placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
+              <textarea ng-class="onboardingInProgress && 'input-separate'" ng-model="note.trans.content" input-model-validator ng-focus="noteContentFocused()" ng-blur="noteContentBlurred()" msd-elastic editable-field ng-trim="false" editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)" placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
               </textarea>
             </div>
 
