--- a/frontend/core/src/main/webapp/static/app/base/tagEditor.html
+++ b/frontend/core/src/main/webapp/static/app/base/tagEditor.html
@@ -3,12 +3,12 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top">
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endTagEdit()">
-          <span class="text-navigation-back" ng-bind="isTagEdited() && !tag.deleted ? 'save' : 'back'"></span>
+          <span class="text-navigation-back" ng-bind="isTagEdited() && !tag.trans.deleted ? 'save' : 'back'"></span>
         </a>
-        <a href ng-if="!tag.deleted" class="group-symmetrical--right" ng-click="deleteTagInEdit()" >
+        <a href ng-if="!tag.trans.deleted" class="group-symmetrical--right" ng-click="deleteTagInEdit()" >
           <span class="icon-trash"></span>
         </a>
-        <a ng-if="tag.deleted" href class="group-symmetrical--right link-navigation highlighted active"
+        <a ng-if="tag.trans.deleted" href class="group-symmetrical--right link-navigation highlighted active"
         ng-click="undeleteTagInEdit()"><span class="text-navigation">restore</span></a>
       </div>
 
