--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -3,8 +3,10 @@
     <div class="container-titlebar--inner">
       <div class="group-symmetrical height-large--top height-large--bottom">
 
-        <a href ng-hide="isEndNoteEditActionHidden()" class="group-symmetrical--left link-navigation active" ng-class="isNoteEdited() && !note.deleted ? 'highlighted' : 'downplayed'" ng-click="endNoteEdit()">
-          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'" ng-bind="isNoteEdited() && !note.deleted ? 'save' : 'back'"></span>
+        <a href ng-hide="isEndNoteEditActionHidden()" class="group-symmetrical--left link-navigation active"
+        ng-class="isNoteEdited() && !note.trans.deleted ? 'highlighted' : 'downplayed'" ng-click="endNoteEdit()">
+          <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'"
+          ng-bind="isNoteEdited() && !note.trans.deleted ? 'save' : 'back'"></span>
         </a>
 
         <a href ng-if="isPickerOpen()" class="group-symmetrical--left highlighted">
@@ -17,10 +19,10 @@
           </a>
         </div>
 
-        <a href ng-if="!note.deleted && !onboardingInProgress" ng-hide="isNotePropertyInEdit()" class="group-symmetrical--right" ng-click="deleteNoteInEdit()">
+        <a href ng-if="!note.trans.deleted && !onboardingInProgress" ng-hide="isNotePropertyInEdit()" class="group-symmetrical--right" ng-click="deleteNoteInEdit()">
           <span class="icon-trash"></span>
         </a>
-        <a href ng-if="note.deleted && !onboardingInProgress" ng-hide="isNotePropertyInEdit()" class="group-symmetrical--right link-navigation highlighted active" ng-click="undeleteNote(note)">
+        <a href ng-if="note.trans.deleted && !onboardingInProgress" ng-hide="isNotePropertyInEdit()" class="group-symmetrical--right link-navigation highlighted active" ng-click="undeleteNote(note)">
           <span class="text-navigation">restore</span>
         </a>
 
