--- a/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
+++ b/frontend/core/src/main/webapp/static/app/tasks/taskEditor.html
@@ -4,12 +4,12 @@
       <div class="group-symmetrical height-large--top">
         <a href class="group-symmetrical--left link-navigation highlighted active" ng-click="endTaskEdit()" >
           <span class="text-navigation-back" ng-class="!isFirstSlide() && 'not-swipeable'"
-            ng-bind="isTaskEdited() && !task.deleted ? 'save' : 'back'"></span>
+            ng-bind="isTaskEdited() && !task.trans.deleted ? 'save' : 'back'"></span>
         </a>
-        <a href ng-if="!task.deleted" class="group-symmetrical--right" ng-click="deleteTaskInEdit()" >
+        <a href ng-if="!task.trans.deleted" class="group-symmetrical--right" ng-click="deleteTaskInEdit()" >
           <span class="icon-trash"></span>
         </a>
-        <a href ng-if="task.deleted" class="group-symmetrical--right link-navigation highlighted active"
+        <a href ng-if="task.trans.deleted" class="group-symmetrical--right link-navigation highlighted active"
           ng-click="undeleteTask(task)"><span class="text-navigation">restore</span></a>
       </div>
 
