Undebugged version of optional sign up. Missing: data sync after sign up.

--- a/frontend/core/src/main/webapp/static/app/entry/entryHome.html
+++ b/frontend/core/src/main/webapp/static/app/entry/entryHome.html
@@ -11,8 +11,8 @@
     </div>
   </section>
   <footer class="container-content--after group-btn">
-    <button class="btn-action" ng-click="swipeToSignup()">
-      <span class="text-btn">sign up</span>
+    <button class="btn-action" ng-click="swipeToNewUser()">
+      <span class="text-btn">new user</span>
     </button>
     <button class="btn-action" ng-click="swipeToLogin()">
       <span class="text-btn">log in</span>
