--- a/frontend/core/src/main/webapp/static/app/entry/tutorial.html
+++ b/frontend/core/src/main/webapp/static/app/entry/tutorial.html
@@ -1,5 +1,8 @@
 <section class="container-content">
   <header class="group-symmetrical">
+    <a href ng-click="swipeToHome()" class="group-symmetrical--left link-navigation">
+      <span class="text-navigation-back">back</span>
+    </a>
     <a href class="group-symmetrical--right link-navigation downplayed" ng-click="skipTutorial()">
       <span class="text-navigation-inline">skip tutorial</span><span class="text-navigation-forward-double"></span>
     </a>
