--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -17,7 +17,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][0].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][0].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][0].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][0].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -25,7 +25,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][1].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][1].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][1].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][1].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -33,7 +33,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][2].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][2].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][2].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][2].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -41,7 +41,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][3].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][3].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][3].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][3].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -49,7 +49,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][4].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][4].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][4].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][4].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -57,7 +57,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][5].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][5].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][5].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][5].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -65,7 +65,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][6].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][6].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][6].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][6].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -77,7 +77,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][0].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][0].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][0].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][0].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -85,7 +85,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][1].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][1].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][1].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][1].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -93,7 +93,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][2].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][2].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][2].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][2].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -101,7 +101,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][3].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][3].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][3].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][3].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -109,7 +109,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][4].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][4].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][4].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][4].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -117,7 +117,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][5].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][5].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][5].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][5].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -125,7 +125,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][6].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][6].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][6].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][6].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -137,7 +137,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[1][0].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[1][0].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][0].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][0].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -145,7 +145,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[1][1].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[1][1].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][1].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][1].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -153,7 +153,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[1][2].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[1][2].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][2].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][2].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -161,7 +161,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[1][3].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[1][3].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][3].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][3].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -169,7 +169,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[1][4].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[1][4].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][4].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][4].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -177,7 +177,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[1][5].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[1][5].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][5].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][5].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -185,7 +185,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[1][6].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[1][6].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][6].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[1][6].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -197,7 +197,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][0].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][0].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][0].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][0].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -205,7 +205,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][1].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][1].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][1].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][1].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -213,7 +213,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][2].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][2].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][2].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][2].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -221,7 +221,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][3].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][3].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][3].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][3].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -229,7 +229,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][4].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][4].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][4].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][4].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -237,7 +237,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][5].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][5].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][5].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][5].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -245,7 +245,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[2][6].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[2][6].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][6].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[2][6].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -257,7 +257,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][0].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][0].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][0].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][0].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -265,7 +265,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][1].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][1].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][1].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][1].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -273,7 +273,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][2].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][2].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][2].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][2].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -281,7 +281,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][3].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][3].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][3].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][3].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -289,7 +289,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][4].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][4].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][4].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][4].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -297,7 +297,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][5].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][5].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][5].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][5].displayDate"></span>
                 </div>
               </a>
             </div>
@@ -305,7 +305,7 @@
               <a href class="datepicker-day-wrapper" ng-click="changeDaySlide(datepickerWeeks[0][6].yyyymmdd)">
                 <div class="datepicker-day">
                   <span class="text-details datepicker-weekday" ng-bind="datepickerWeeks[0][6].weekday"></span>
-                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][6].displayDateShort"></span>
+                  <span class="datepicker-date" ng-bind="datepickerWeeks[0][6].displayDate"></span>
                 </div>
               </a>
             </div>
