--- a/frontend/core/src/main/webapp/static/app/main/inbox.html
+++ b/frontend/core/src/main/webapp/static/app/main/inbox.html
@@ -24,7 +24,7 @@
     <div class="animate-list-item-leave row-vertically-centered"
       ng-repeat="item in listInfos.array = (getFullArray()) | orderBy:'trans.created':true
       | limitTo: currentListLimitTo track by item.trans.uuid" list-item>
-      <a href class="link-list-item" swiper-click="openItemEditor(item)">
+      <a href class="link-list-item" ng-click="openItemEditor(item)">
         <span class="text-link" clamp=2 ng-bind="item.trans.title"></span>
       </a>
     </div>
