Fixed layout problem with synchronize your mind -text

--- a/frontend/core/src/main/webapp/static/app/user/userHome.html
+++ b/frontend/core/src/main/webapp/static/app/user/userHome.html
@@ -76,7 +76,7 @@
     </div>
 
   </section>
-  <section ng-if="isFakeUser()">
+  <section ng-if="isFakeUser()" class="container-content">
     <div class="group-instruction">
       <h2 class="group-heading instruction row">synchronize your
         <span class="highlighted">mind</span>
