Made vertical-resize delaying specific to note, as the problem is especially hard there and not in other places. This fixes problem with sign up breaking.

--- a/frontend/core/src/main/webapp/index_devel.html
+++ b/frontend/core/src/main/webapp/index_devel.html
@@ -101,7 +101,7 @@
   <script src="static/app/base/swiperPreventDirective.js"></script>
   <script src="static/app/base/swiperSlideDirective.js"></script>
   <script src="static/app/base/verticalResizeDirective.js"></script>
-
+  <script src="static/app/base/verticalResizeDelayDirective.js"></script>
   <script src="static/app/user/UserController.js"></script>
   <script src="static/app/user/UserEditorController.js"></script>
   <script src="static/app/user/UserService.js"></script>
