--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -113,7 +113,7 @@
 
             <!-- CONTENT -->
             <div ng-if="drawerAisleInitialized" class="row-vertically-centered with-textarea">
-              <textarea ng-class="(onboardingInProgress && !contentFocused) && 'input-separate'" ng-model="note.trans.content" input-model-validator ng-trim="false" msd-elastic editable-field editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)" editable-field-focus="noteContentFocused()" editable-field-blur="noteContentBlurred()" placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
+              <textarea id="noteContent" ng-class="(onboardingInProgress && !contentFocused) && 'input-separate'" ng-model="note.trans.content" input-model-validator ng-trim="false" msd-elastic editable-field editable-field-register-callbacks="registerNoteContentInputCallbacks(focus, blur)" editable-field-focus="noteContentFocused()" editable-field-blur="noteContentBlurred()" placeholder="enter content&#8230;" autocapitalize="none" autocorrect="off">
               </textarea>
             </div>
 
