Better LESS class naming.

--- a/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
+++ b/frontend/core/src/main/webapp/static/app/notes/noteEditor.html
@@ -27,11 +27,11 @@
         </a>
 
         <div ng-if="contentFocused || listPickerOpen " class="group-symmetrical--right">
-          <span class="text-field-label" ng-bind="contentFocused ? 'content' : 'list'"></span>
+          <span class="text-field--label" ng-bind="contentFocused ? 'content' : 'list'"></span>
         </div>
         <div ng-if="keywordsPickerOpen" class="group-symmetrical--right">
-          <div class="text-field-label-multi-row">
-            <span ng-bind="'key' + (columns === 1 ? '-\n' : '') + 'words'" class="text-field-label"></span>
+          <div class="text-field--label-multi-row">
+            <span ng-bind="'key' + (columns === 1 ? '-\n' : '') + 'words'" class="text-field--label"></span>
           </div>
         </div>
 
